# JNITest

./: README.md
app/: CMakeLists.txt  build.gradle
app/jni/: Android.mk  Application.mk  NativeListener.cpp  NativeListener.h  PrintCpp.cpp  PrintCpp.h
app/src/androidTest/java/com/example/jnitest001/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/inpor/jnitest001/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cmake_test.cpp  cmake_test.h
app/src/main/java/com/example/jnitest001/UI/: MainActivity.java
app/src/main/java/com/example/jnitest001/nativeAdapter/: NativeListener.java  Person.java
app/src/main/java/com/example/jnitest001/nativeClass/: CmakeTest.java  PrintCpp.java
app/src/main/java/com/example/jnitest001/nativeclass/: PrintCpp.java
app/src/main/java/com/inpor/jnitest001/nativeAdapter/: Skill.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jnitest001/: ExampleUnitTest.java
app/src/test/java/com/inpor/jnitest001/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
